--- a/popup.html
+++ b/popup.html
@@ -30,6 +30,7 @@
         </div>
 
         <script src="popup.js"></script>
+        <script src="bootstrap.bundle.min.js"></script>
     </div>
 </body>
 
