--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
+    
     <div id="main" class="container">
         <h3>Tag selector</h3>
 
@@ -22,7 +21,7 @@
             
 
         </form>
-        <div class="text-center"
+        <div class="text-center">
         <small id="searchSummary" class="text-muted"></small>
         </div>
         <div id="listHolder">
