--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
-    
+
     <div id="main" class="container">
-        <h3>Tag selector</h3>
+        <div id="header" class="d-flex justify-content-between align-items-center">
+            <h1 class="fw-light">Resource Tag selector</h1>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="groupingSwitch" checked>
+                <label class="form-check-label" for="groupingSwitch">Grouping</label>
+            </div>
+        </div>
 
         <form id="searchForm" class="form-inline">
             <div id="inputHolder" class="input-group">
@@ -18,11 +24,11 @@
             </div>
 
 
-            
+
 
         </form>
         <div class="text-center">
-        <small id="searchSummary" class="text-muted"></small>
+            <small id="searchSummary" class="text-muted"></small>
         </div>
         <div id="listHolder">
 
